<resources>
    <string name="app_name">Pop Movies</string>
    <string name="refresh">Refresh!</string>
    <string name="popular_label">popular</string>
    <string name="popular_value">Popular</string>
    <string name="top_rated_label">top_rated</string>
    <string name="top_rated_value">Top rated</string>
    <string name="favourites_label">favourites</string>
    <string name="favourites_value">Favourites</string>
    <string name="fetch_error_message">Something went wrong. Please check your Internet connection and try again.</string>
    <string name="placeholder_movie_title">Movie Title</string>
    <string name="placeholder_vote_average">TMDb: 10.0/10</string>
    <string name="placeholder_release_date">Feb 11, 2017</string>
    <string name="placeholder_plot_synopsis">Plot synopsis</string>
    <string name="placeholder_movie_poster">Poster of the movie</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_review_author">John Smith</string>
    <string name="placeholder_trailer_name">Trailer 1 Name</string>
    <string name="reviews_label">Reviews</string>
    <string name="action_settings">Settings</string>
    <string name="videos_label">Trailers</string>
    <string name="placeholder_trailer_thumbnail">Play a trailer!</string>
    <string name="overview">Synopsis</string>
    <string-array name="queries">
        <item>@string/popular_value</item>
        <item>@string/top_rated_value</item>
        <item>@string/favourites_value</item>
    </string-array>
</resources>
