<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.mz.udacitypopularmovies.DetailActivity">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                tools:text="@string/placeholder_movie_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/placeholder_movie_poster" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        style="@style/Base.TextAppearance.AppCompat.Caption"
                        tools:text="@string/placeholder_release_date" />

                    <TextView
                        android:id="@+id/movie_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        style="@style/Base.TextAppearance.AppCompat.Caption"
                        tools:text="@string/placeholder_vote_average" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/movie_rating_star1"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/star_off_24px" />

                        <ImageView
                            android:id="@+id/movie_rating_star2"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/star_off_24px" />

                        <ImageView
                            android:id="@+id/movie_rating_star3"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/star_off_24px" />

                        <ImageView
                            android:id="@+id/movie_rating_star4"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/star_off_24px" />

                        <ImageView
                            android:id="@+id/movie_rating_star5"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/star_off_24px" />
                    </LinearLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:tint="@color/colorPrimary"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/favourite_24px"
                        android:onClick="onClickFavorite" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/movie_plot_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                tools:text="@string/placeholder_plot_synopsis" />

            <TextView
                android:id="@+id/movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="@dimen/reviews_text_size"
                tools:text="@string/placeholder_lorem_ipsum" />

            <include layout="@layout/activity_reviews" />

            <include layout="@layout/activity_videos" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_review_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</ScrollView>
